完成2019: 1,2,3,4,8,9,10号需求/BUGFIX